# entropyserverfork

./: .env.example  .gitignore  API.md  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SPECS.md  STRUCTURE.md  docker-compose.yml
.github/workflows/: ci.yml
build_asan/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake
build_asan/tests/: CTestTestfile.cmake  entropy_tests[1]_include.cmake
include/: challenge.hpp  connection_manager.hpp  http_session.hpp  input_validator.hpp  key_storage.hpp  message_relay.hpp  metrics.hpp  pow_verifier.hpp  rate_limiter.hpp  redis_manager.hpp  security_logger.hpp  server_config.hpp  traffic_normalizer.hpp  websocket_session.hpp
include/handlers/: health_handler.hpp  identity_handler.hpp
scripts/: strip_comments.py
src/: config.rs  connection_manager.cpp  http_session.cpp  lib.rs  main.cpp  main.rs  message_relay.cpp  rate_limiter.cpp  redis_manager.cpp  traffic_normalizer.cpp  websocket_session.cpp
src/db/: redis.rs
src/handlers/: health.rs  health_handler.cpp  identity.rs  identity_handler.cpp  mod.rs
src/relay/: mod.rs
src/security/: logger.rs  mod.rs  noise.rs  pow.rs  validator.rs
src/server/: mod.rs  registry.rs  ws.rs
src/telemetry/: log.rs  metrics.rs
tests/: CMakeLists.txt  identity_governance_tests.rs  relay_mailbox_tests.rs  security_deep_tests.rs  server_infrastructure_tests.rs
tests/advanced/: test_benchmarks.cpp  test_concurrency.cpp  test_extreme_backpressure.cpp  test_fuzzing.cpp  test_logging_audit.cpp  test_network_chaos.cpp  test_network_faults.cpp  test_resource_lifecycle.cpp  test_soak_stability.cpp  test_stateful_fuzzing.cpp  test_timing_resistance.cpp
tests/integration/: test_full_flow.cpp  test_http_handlers.cpp  test_identity_handler.cpp
tests/security/: test_admin_security.cpp  test_crypto_extremes.cpp  test_dos_protection.cpp  test_security_audit.cpp  test_vulnerability_vectors.cpp
tests/unit/: test_connection_manager.cpp  test_input_validator.cpp  test_pow_verifier.cpp  test_traffic_normalizer.cpp
