[package]
name = "entropy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
async-trait = "0.1"
dashmap = "6.1"
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-rustls = "0.26"
rustls = "0.23"
regex = "1.11"
num_cpus = "1.16"
curve25519-dalek = "4.1"
uuid = { version = "1.13", features = ["v4"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
argon2 = "0.5"
num-bigint = "0.4"
subtle = "2.6.1"
once_cell = "1.21.3"
chrono = "0.4.43"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", package = "libsignal-protocol" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
